--- a/code/signup.html
+++ b/code/signup.html
@@ -24,29 +24,38 @@
     </header>
 
     <main>
-        <form id="signupForm" action="#" onsubmit="return validateForm()">
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
-            <span id="usernameError" class="error-message"></span>
+        <div class="container">
+            <!-- onsubmit means when the form is complete we send the data to validateForm method-->
+            <form id="signupForm" action="#" onsubmit="return validateForm()">
+                <h2>Ticket Tech Registration </h2>
+                <!--link to login if you have an account-->
+                <p>Already have an account? <a href="login.html">Log in here</a>.</p>
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" required>
+                <span id="usernameError" class="error-message"></span>
 
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-            <span id="emailError" class="error-message"></span>
+                <!--E-mail-->
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+                <span id="emailError" class="error-message"></span>
+                <!--Password, 1st box-->
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required>
+                <span id="passwordError" class="error-message"></span>
+                <!--Password, 2nd box-->
+                <label for="confirmPassword">Confirm Password:</label>
+                <input type="password" id="confirmPassword" name="confirmPassword" required>
+                <span id="confirmPasswordError" class="error-message"></span>
 
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
-            <span id="passwordError" class="error-message"></span>
+                <button type="submit">Sign Up</button>
+            </form>
+            <div id="successMessage">Your account has been successfully validated! Page Will Redirect Within 20 Seconds.</div>
+        </div>
 
-            <label for="confirmPassword">Confirm Password:</label>
-            <input type="password" id="confirmPassword" name="confirmPassword" required>
-            <span id="confirmPasswordError" class="error-message"></span>
-
-            <button type="submit">Sign Up</button>
-        </form>
-        <div id="successMessage">Your account has been successfully validated! Page Will Redirect Within 20 Seconds.</div>
     </main>
     <script>
         function validateForm() {
+            event.preventDefault();
             /*Validation for sign up Simple getters*/
             var username = document.getElementById("username").value;
             var email = document.getElementById("email").value;
@@ -65,45 +74,67 @@
 
             var isValid = true;
 
-            /*Username Error Msg / checker*/
+            //Username Error Msg / checker
             if (username.trim() === "") {
                 usernameError.innerHTML = "Username is required!";
                 isValid = false;
             }
-            /*email Error Msg / checker*/
+            //email Error Msg / checker
             var emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
             if (!emailRegex.test(email)) {
                 emailError.innerHTML = "Enter a valid email!";
                 isValid = false;
             }
-            /*password Error Msg / checker*/
+            //password Error Msg / checker
             if (password.length < 8) {
                 passwordError.innerHTML = "Password Must be at least 8 characters long!";
                 isValid = false;
             }
-            /*ensure password and confim are the same*/
+            //ensure password and confim are the same
             if (confirmPassword !== password) {
                 confirmPasswordError.innerHTML = "passwords do not match!";
                 isValid = false;
             }
-            /*user feedback for account validation*/
+            //user feedback for account validation
             if (isValid) {
                 //alert("Account Successfuly Validated");
+                saveUserInformation(username, email, password);
+
+                // Print user data to console
+                //**!!! get rid of before final submission or comment it out as this is bad for security !!!**
+                console.log("User Data:", {
+                    username,
+                    email,
+                    password
+                });
+
                 showSuccessMessage();
             }
             return isValid;
         }
-        /*this show validation function really only works on browser, VS code kinda hates it*/
-        /*it just flashes green in vscode*/
+        // Function to save user information to localStorage, this will change when we figure out db stuff as this only works client side not server side
+        function saveUserInformation(username, email, password) {
+            var userData = JSON.parse(localStorage.getItem("userData")) || [];
+
+            userData.push({
+                username: username,
+                email: email,
+                password: password
+            });
+
+            localStorage.setItem("userData", JSON.stringify(userData));
+        }
+        // Function to display success message and redirect to login page
         function showSuccessMessage() {
             var successMessage = document.getElementById("successMessage");
-            //show message
             successMessage.style.display = "block";
-            // fixed?
             setTimeout(function() {
                 successMessage.style.display = "none";
-                window.location.href = "Home.html";
-            }, 50000);
+
+                // Redirect to the login page
+                console.log("Redirecting to login page");
+                window.location.href = "login.html";
+            }, 2000);
         }
     </script>
 </body>
