Connected Details page to Concert Browser and Added information to Details page
I changed the reference to the correct reference for the concert page to link to the details page. I also modified the CSS for the details page as well as added some of the information to the details page.

--- a/code/Concerts.html
+++ b/code/Concerts.html
@@ -32,7 +32,7 @@
                     <img src="images/1-1_image_1080.jpg" alt="Band/person/ team IMG">
                 </figure>
                 <!--DETAILS PAGE NEEDS TO BE MADE, Buttons when cliked point nowhere -->
-                <button class="see-more-button" onclick="location.href='details-page.html'">See More Details</button>
+                <button class="see-more-button" onclick="location.href='Details.html'">See More Details</button>
             </div>
         </article>
         <article>
@@ -46,7 +46,7 @@
                     <img src="images/1-1_image_1080.jpg" alt="Band/person/ team IMG">
                 </figure>
                 <!--DETAILS PAGE NEEDS TO BE MADE, Buttons when cliked point nowhere -->
-                <button class="see-more-button" onclick="location.href='details-page.html'">See More Details</button>
+                <button class="see-more-button" onclick="location.href='Details.html'">See More Details</button>
             </div>
         </article>
         <article>
@@ -60,7 +60,7 @@
                     <img src="images/1-1_image_1080.jpg" alt="Band/person/ team IMG">
                 </figure>
                 <!--DETAILS PAGE NEEDS TO BE MADE, Buttons when cliked point nowhere -->
-                <button class="see-more-button" onclick="location.href='details-page.html'">See More Details</button>
+                <button class="see-more-button" onclick="location.href='Details.html'">See More Details</button>
             </div>
         </article>
     </main>
