--- a/code/Details.html
+++ b/code/Details.html
@@ -25,7 +25,17 @@
     <article> 
         <h1> 
             <div> 
-                <a rel="author">AC/DC</a>
+                <a rel="author">Artist Name</a>
+            </div>
+            <div>
+                <figure>
+                    <img src="images/1-1_image_1080.jpg" alt="Band/person/ team IMG">
+                </figure>
+            </div>
+            <div>
+                <p>Location: Santa Monica Bay </p>
+                <p>Date: 3:00 PM 23/08/24</p>
+                <p>Price: $250</p>
             </div>
         </h1>
     </article>
