Modified Details page layout.
I changed the layout and line spacing of the description in the details page.

--- a/code/Details.html
+++ b/code/Details.html
@@ -37,6 +37,14 @@
                 <p>Date: 3:00 PM 23/08/24</p>
                 <p>Price: $250</p>
             </div>
+            <div>
+                <p2>
+                    Description:
+                </p2>
+            </div>
+            <p2>
+                The quick brown fox jumped over the lazy dog. The quick brown fox jumped over the lazy dog The quick brown fox jumped over the lazy dog The quick brown fox jumped over the lazy dog The quick brown fox jumped over the lazy dogThe quick brown fox jumped over the lazy dog The quick brown fox jumped over the lazy dog The quick brown fox jumped over the lazy dog
+            </p2>
         </h1>
     </article>
 </main>
