--- a/code/Details.html
+++ b/code/Details.html
@@ -23,28 +23,25 @@
 </body>
 <main> 
     <article> 
-        <h1> 
-            <div> 
-                <a rel="author">Artist Name</a>
-            </div>
-            <div>
+        <h1>  
                 <figure>
                     <img src="images/1-1_image_1080.jpg" alt="Band/person/ team IMG">
                 </figure>
-            </div>
             <div>
+                <a rel="author">Artist Name</a>
                 <p>Location: Santa Monica Bay </p>
                 <p>Date: 3:00 PM 23/08/24</p>
                 <p>Price: $250</p>
-            </div>
-            <div>
-                <p2>
-                    Description:
-                </p2>
-            </div>
+            </div> 
+            <lib></lib>
             <p2>
+                <br>
+                Description:
+                </br>
+
                 The quick brown fox jumped over the lazy dog. The quick brown fox jumped over the lazy dog The quick brown fox jumped over the lazy dog The quick brown fox jumped over the lazy dog The quick brown fox jumped over the lazy dogThe quick brown fox jumped over the lazy dog The quick brown fox jumped over the lazy dog The quick brown fox jumped over the lazy dog
-            </p2>
+           
+            </p2>            
         </h1>
     </article>
 </main>
