Added/ Altered Comments
Added some comments on the details page and changed the comments in Concerts regarding the lack of a details page.

--- a/code/Concerts.html
+++ b/code/Concerts.html
@@ -45,7 +45,7 @@
                 <figure>
                     <img src="images/1-1_image_1080.jpg" alt="Band/person/ team IMG">
                 </figure>
-                <!--DETAILS PAGE NEEDS TO BE MADE, Buttons when cliked point nowhere -->
+                <!--DETAILS PAGE LINK-->
                 <button class="see-more-button" onclick="location.href='Details.html'">See More Details</button>
             </div>
         </article>
@@ -59,7 +59,7 @@
                 <figure>
                     <img src="images/1-1_image_1080.jpg" alt="Band/person/ team IMG">
                 </figure>
-                <!--DETAILS PAGE NEEDS TO BE MADE, Buttons when cliked point nowhere -->
+                <!--DETAILS PAGE Link -->
                 <button class="see-more-button" onclick="location.href='Details.html'">See More Details</button>
             </div>
         </article>
