--- a/code/Details.html
+++ b/code/Details.html
@@ -24,10 +24,12 @@
 <main> 
     <article> 
         <h1>  
+                <!--Image-->
                 <figure>
                     <img src="images/1-1_image_1080.jpg" alt="Band/person/ team IMG">
                 </figure>
             <div>
+                <!--Important Event Info-->
                 <a rel="author">Artist Name</a>
                 <p>Location: Santa Monica Bay </p>
                 <p>Date: 3:00 PM 23/08/24</p>
@@ -35,6 +37,7 @@
             </div> 
             <lib></lib>
             <p2>
+                <!--Event Description-->
                 <br>
                 Description:
                 </br>
