redirecting login page to user page

--- a/code/login.html
+++ b/code/login.html
@@ -54,7 +54,7 @@
                 console.log("Username:", username);
                 console.log("Password:", password);
                 // KEVIN redirect when logged in!
-                window.location.href = "Concerts.html";
+                window.location.href = "userPage.html";
             } else {
                 console.log("Login Failed!");
                 alert("Invalid username or password. Please try again.");
