modified the syling to be flexible as the size of the browser changes

--- a/code/userPage.html
+++ b/code/userPage.html
@@ -28,7 +28,7 @@
 
     <div class="container">
         <div class="d-flex justify-content-between">
-            <div class="w-leftbox">
+            <div class="wleftbox">
                 <div>
                     <a href="#">My Tickets</a>
                 </div>
