--- a/code/Concerts.html
+++ b/code/Concerts.html
@@ -57,6 +57,7 @@
         // images/${artist.ArtistName.replace(/\s+/g, '-').toLowerCase()}.jpg 
         // ^ does special image and string concatination, I stole this, as I could never derive this
         // commented out the individual images as this is not nice and clean as we dont have that data yet so just put the old place holder in
+        //link image to gogle drive 
         function generateConcertHTML(artist) {
             return `
             <article>
