fixed position issue

--- a/code/userPage.html
+++ b/code/userPage.html
@@ -27,8 +27,8 @@
 
 
     <div class="container">
-        <div class="d-flex justify-content-between">
-            <div class="wleftbox">
+        <div class="w-100 d-flex justify-content-between">
+            <div class="w-25 leftbox">
                 <div>
                     <a href="#">My Tickets</a>
                 </div>
