--- a/code/userPage.html
+++ b/code/userPage.html
@@ -102,7 +102,7 @@
     
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-<script src="userPage.js"></script>
+<script src="javaScript/userPage.js"></script>
 <script src="unit_testing/userPageTesting.js"></script>
 </body>
 
