--- a/code/Concerts.html
+++ b/code/Concerts.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/Trending-Style.css">
+    <script src="javaScript/cart.js" defer></script>
 </head>
 
 <body>
@@ -19,6 +20,7 @@
                 <li><a href="signup.html">Sign Up</a></li>
             </ul>
         </nav>
+        <div id="cart-icon" onclick="showCart()">🛒</div>
     </header>
     <main id="concertList"></main>
 
@@ -114,6 +116,7 @@
         // Call the function to render concerts when the page loads
         window.onload = function() {
             renderConcerts();
+            displayCartContent();
         };
     </script>
 </body>
