--- a/code/login.html
+++ b/code/login.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/Signup-Style.css">
+    <script src="javaScript/cart.js" defer></script>
     <title>Login</title>
 </head>
 
@@ -20,6 +21,7 @@
                 <li><a href="signup.html">Sign Up</a></li>
             </ul>
         </nav>
+        <div id="cart-icon" onclick="showCart()">🛒</div>
     </header>
 
     <main>
