Added the Book Event button to the details tab
I added the book even button to the details tab and ensured that the styling is in accordance to the rest of the document. The pointer currently goes to the Cart page which is set up in a different branch.

--- a/code/Details.html
+++ b/code/Details.html
@@ -44,6 +44,9 @@
                
                 </p2>          
             </div>     
+            <div>
+                <button class="book-event-button" onclick="location.href='Cart.html'">Book Event</button>
+            </div>
         </h1>
     </article>
 </main>
