--- a/code/cart.html
+++ b/code/cart.html
@@ -23,9 +23,10 @@
     </header>
     <main>
         <h1>Shopping Cart</h1>
+        <!-- create fake conents in here-->
     </main>
     <main id="cartContent">
-        <!-- Display cart items here -->
+        <!-- Display cart items here Dont Mess with it -->
     </main>
 
 </body>
