--- a/code/userPage.html
+++ b/code/userPage.html
@@ -105,6 +105,17 @@
      
     
 </div>
+
+<script>
+    async function fetchClientData() {
+            return [{
+                name: "tester",
+                email: "tester@gmail.com",
+                password: "testerpassword"
+            }];
+        }
+</script>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="javaScript/userPage.js"></script>
 <script src="unit_testing/userPageTesting.js"></script>
